<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="content"
                type="com.example.hw3.ContentData"/>
    </data>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/mypicture"/>

            <TextView
                    android:id="@+id/name_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/name_title"
                    android:textAlignment="center"
                    android:textColor="@color/colorwhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/nickname_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.5"/>

            <TextView
                    android:id="@+id/nickname_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/nickname_title"
                    android:textAlignment="center"
                    android:textColor="@color/colorwhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:layout_constraintStart_toEndOf="@+id/name_title" app:layout_constraintHorizontal_bias="0.5"/>
            <TextView
                    android:id="@+id/how_about_me_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/how_about_me_title"
                    android:textAlignment="center"
                    android:textColor="@color/colorwhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_text" android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/how_about_you_text"
                    app:layout_constraintVertical_bias="1.0"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/name_text" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/name_title"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/nickname_text" android:hint="@string/what_your_name"
                    android:textAlignment="center" android:textColorLink="@color/colorPrimary"
                    app:layout_constraintBottom_toTopOf="@+id/nametextView" app:layout_constraintVertical_bias="0.0"
                    android:layout_marginBottom="16dp"
                    android:text="@={content.name}"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/nickname_text"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/name_text"
                    android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
                    android:hint="@string/what_yuor_nickname"
                    android:textAlignment="center" app:layout_constraintTop_toBottomOf="@+id/nickname_title"
                    app:layout_constraintBottom_toTopOf="@+id/nicknametext" android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@={content.nickname}"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/how_about_you_text"
                    app:layout_constraintTop_toBottomOf="@+id/how_about_me_title" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/how_about_you_text"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/aboutyou"
                    android:text="@={content.aboutyou}"/>
            <Button
                    android:text="@string/save_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/savebutton" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/aboutyou"
                    android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/nametextView" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/name_text" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/how_about_me_title" android:visibility="gone"
                    android:textSize="18sp" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/nicknametext" android:layout_marginEnd="8dp"
                    android:textAlignment="center"
                    />
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/nicknametext" android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/nickname_text" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/how_about_me_title"
                    app:layout_constraintStart_toEndOf="@+id/nametextView"
                    app:layout_constraintHorizontal_bias="0.5" android:visibility="gone"
                    android:textAlignment="center"
                    />
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/aboutyou"
                    app:layout_constraintTop_toBottomOf="@+id/how_about_you_text"
                    app:layout_constraintBottom_toTopOf="@+id/savebutton" android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                     android:textSize="18sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
